# AgentChat

./: .gitattributes  .gitignore  AGENTS.md  README.md  build.ps1  build.sh  run.bat  run.sh  test_run.bat  Сообшение от Германа.txt
.github/workflows/: build-linux.yml  release.yml
backend/: extraction.py  main.py  main_terminal.py  paths.py  pyproject.toml  requirements.txt  run.py  shell.py
backend/agent/: __init__.py  config.py  exec_common.py  file_tag_interceptor.py  host_exec.py  loop.py  posix_exec.py  reasoning_split.py  research_prompt.py  research_runner.py  sandbox.py  system_prompt.py  types.py  untrusted.py  write_file_stream.py  wsl_exec.py
backend/agent/prompt/: __init__.py  context.py  model_family.py  modules.py  registry.py  sections.py  shells.py
backend/api/: __init__.py  agents.py  chat.py  chats.py  config_routes.py  files.py  health.py  mcp.py  models.py  models_routes.py  offline.py  projects.py  remote.py  router.py  searxng.py  settings.py  skills.py  usage.py  win_deps.py  wsl.py
backend/api/schemas/: __init__.py  agents.py  chat.py  mcp.py  settings.py  skills.py
backend/llm/: __init__.py  client.py  model_tag.py  models_fetcher.py  token_breakdown.py  usage_logging.py
backend/mcp_integration/: __init__.py  client.py  config.py  manager.py  registry_view.py  tool_proxy.py
backend/skills/: __init__.py  catalog.py  installer.py  reader.py
backend/store/: chat_store.py  project_store.py  settings_store.py  usage_store.py
backend/tools/: ask_user.py  base.py  bash_tool.py  edit_file.py  factory.py  present_files.py  read_file.py  read_photo.py  read_skill.py  registry.py  research_tool.py  show_widget.py  web_fetch_tool.py  web_search_tool.py  write_file.py
backend/web_search/: __init__.py  config.py  service.py
docs/: astryx-migration-guide.md
scripts/: build-backend.ps1  build-backend.sh
skills/agentchat/: SKILL.md
skills/docx/: SKILL.md
skills/docx/scripts/: replace.py
skills/pdf/: SKILL.md
skills/pdf/scripts/: fill_form.py
skills/pptx/: SKILL.md
skills/sample/: SKILL.md  skill.json
skills/xlsx/: SKILL.md
src-tauri/: Cargo.toml  tauri.android.conf.json  tauri.conf.json
src-tauri/capabilities/: default.json  desktop-downloads.json  mobile.json
src-tauri/icons/: icon.icns
src-tauri/src/: desktop_backend.rs  lib.rs  main.rs
src-tauri/windows/: hooks.nsh
tests/: conftest.py
tests/backend/: __init__.py  test_agent_loop.py  test_archive_tree.py  test_chat_history.py  test_chat_purge.py  test_loop_path_resolution.py  test_posix_support.py  test_python_env.py  test_reasoning_split.py  test_remote_access.py  test_research_tool.py  test_sandbox_policy.py  test_settings_store.py  test_skills_installer.py  test_system_prompt.py  test_token_breakdown.py  test_tool_call_streaming.py  test_tools.py  test_untrusted.py  test_usage_store.py
ui/: index.html  package-lock.json  package.json  tsconfig.json
ui/public/: manifest.webmanifest
ui/src/: App.tsx  DebugComposerHarness.tsx  DebugUpdateHarness.tsx  DebugUsageHarness.tsx  main.tsx  vite-env.d.ts
ui/src/components/: AgentAvatar.tsx  AllChatsPage.tsx  BottomSheet.tsx  ErrorBoundary.tsx  FilesGalleryPage.tsx  FrontmatterCard.tsx  GhostChat.tsx  GlobalDropZone.tsx  LibraryPage.tsx  Sidebar.tsx
ui/src/contexts/: SettingsContext.tsx
(+159 files in other folders)
